# TAIX-Ray

./: .gitignore  DATA_USAGE.md  README.md  README_Dataset.md  README_Model.md  environment.yaml  pyproject.toml
cxr/data/datasets/: __init__.py  cxr_dataset.py
cxr/models/: __init__.py  base_model.py  mst.py  resnet.py
cxr/models/utils/: losses.py
cxr/utils/: roc_curve.py
scripts/: main_predict.py  main_predict_binary.py  main_predict_ordinal.py  main_regression.py  main_train.py
scripts/phi_scan/: ocr_xray_texts.py  scan_phi_llm.py
scripts/plot/: plot_multiple_binary.py  plot_multiple_ordinal.py  plot_stats.py
scripts/preprocessing/: step1_download.py  step2_maybecopy.py  step3_remove_multi_img.py  step4_extract_labels.py  step5_remove_nolabels.py  step5b_remove_manually.py  step6_create_split.py  step7_create_png.py  step8_resize.py  step9_createpdf.py
tests/data/: test_dataset.py  test_load_img.py
tests/losses/: test_ordinal_loss.py
tests/model/: test_model.py  test_model_step.py
